# simdlib

./: CMakeLists.txt  main.cpp
benchmarks/: simd_vector_benchmark.cpp
cmake/: benchmark.cmake  gtests.cmake
include/simdlib/: simd_operations.hpp  simd_traits.hpp  simd_utils.hpp  simd_vector.hpp
src/: simd_vector.cpp
tests/: simd_vector_test.cpp
